--- a/ServicesAndClients/ServicesAndClients.csproj
+++ b/ServicesAndClients/ServicesAndClients.csproj
@@ -27,4 +27,10 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\PageUpcomingEntries.axaml.cs">
+      <DependentUpon>PageUpcomingEntries.axaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
